# x-monitor

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
config/: accounts.json
src/: __init__.py  agent.py  config.py  main.py  storage.py
src/analyzers/: __init__.py  llm_analyzer.py
src/models/: __init__.py  tweet.py
src/notifiers/: __init__.py  email_notifier.py  telegram_notifier.py
src/schedulers/: __init__.py  daily_job.py
src/scrapers/: __init__.py  x_scraper.py
tests/: __init__.py  test_models.py
